@startuml
'https://plantuml.com/class-diagram

class Path
class DB
class PathScreen
class DetailScreen
class EditPath
class _MyHomePageState
abstract class StatelessWidget
abstract class State

'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

class Path {
id: int
title: String
description: String
start_long: double
start_lat: double
end_long: double
end_lat: double
}

class DB{
database: Database?
}

class PathScreen extends StatelessWidget {
paths: List<Path>
}

class DetailScreen extends StatelessWidget{
path: Path
}

class EditPath extends StatelessWidget{
path: Path
}

class _MyHomePageState extends State{
markerMap: <String, String> {}
marks: []
}

@enduml